tests/gen/testdata/configs/fail/platform_extension_invalid_cni.jsonnet
// OKE extension rejects unknown OKE cluster CNI values
// error_contains: config_params.cni must be one of: vcn_native, flannel
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      platforms: {
        oke: {
          network: { vcn: '10.0.80.0/21' },
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
              services_cidr: '10.96.0.0/16',
              cni: 'cilium',
              api_endpoint_allowed_cidrs: ['10.0.1.0/24'],
            },
          },
        },
      },
    },
  },
}
